feat: Adaptación completa para Synology DS1520+ / DSM 7.2
 OPTIMIZACIÓN SYNOLOGY DS1520+:
- Docker Compose optimizado para Container Manager
- PostgreSQL 15-alpine para mejor rendimiento
- Healthchecks y reintentos robustos
- Configuración de red y volúmenes específica

 CONFIGURACIÓN PERSONALIZADA:
- Variables de entorno documentadas para modificación
- Rutas configuradas para /volume1/docker/bot_telegram/
- Logging centralizado en /app/logs/
- Backup automático en /app/data/backups/

 ARCHIVOS ESPECÍFICOS SYNOLOGY:
- SYNOLOGY_SETUP.md: Guía completa de instalación
- CONFIGURACION_SYNOLOGY.md: Datos exactos a modificar
- synology_check.sh: Script de verificación del sistema
- .dockerignore optimizado para reducir imagen

 MEJORAS TÉCNICAS:
- Usuario no-root para seguridad
- PostgreSQL por defecto (más robusto que SQLite)
- Reintentos automáticos en conexiones BD
- Requirements.txt con versiones fijas
- Timezone configurado para España

 DATOS A MODIFICAR:
- BOT_TOKEN: Token real de @BotFather
- POSTGRES_PASSWORD: Contraseña segura personalizada
- ADMIN_USER_ID: ID real del usuario administrador
- Rutas de volúmenes si no es /volume1/

 LISTO PARA PRODUCCIÓN:
- Compatible con Container Manager DSM 7.2
- Documentación completa para despliegue
- Scripts de verificación incluidos
- Configuración robusta para hardware Synology

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,98 @@
-# .dockerignore
+# =============================================================================
+# .dockerignore para Synology DS1520+ - Optimización de imagen
+# =============================================================================
 
-__pycache__/
-*.pyc
-.git/
+# Archivos de documentación
+*.md
+README*
+CHANGELOG*
+LICENSE
+*.txt
+!requirements.txt
+
+# Archivos de git
+.git
 .gitignore
+.gitattributes
+
+# Archivos de Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Entornos virtuales
+.venv
+env/
 venv/
-.venv/
-Dockerfile
-.dockerignore
+ENV/
+env.bak/
+venv.bak/
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Logs
+*.log
+logs/
+
+# Datos locales (se montan como volúmenes)
+data/
+postgres_data/
+backups/
+
+# Archivos temporales
+.tmp/
+*.tmp
+*.temp
+
+# Archivos de sistema
+.DS_Store
+Thumbs.db
+
+# Archivos de testing local
+test_*.py
+*_test.py
+tests/
+
+# Scripts de desarrollo
+dev_*.py
+debug_*.py
+
+# Archivos de configuración local
+.env.local
+.env.development
+config.local.*
+
+# Archivos de backup
+*.bak
+*.backup
+*.sql
+
+# Archivos grandes que no son necesarios
+*.zip
+*.tar.gz
+*.rar
+
+# Cache de Docker
+Dockerfile.dev
