--- a/.env
+++ b/.env
@@ -1,18 +1,60 @@
-# Configuración de base de datos
-USE_SQLITE=true
-POSTGRES_DB=bot_telegram_db
-POSTGRES_USER=bot_user
-POSTGRES_PASSWORD=bot_password123
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
+# =============================================================================
+# CONFIGURACIÓN PARA SYNOLOGY DS1520+ / DSM 7.2 - Container Manager
+# =============================================================================
 
-# Token del bot de Telegram (reemplazar con el token real)
+# 🤖 TOKEN DEL BOT DE TELEGRAM
+# IMPORTANTE: Reemplazar con tu token real de @BotFather
 BOT_TOKEN=your_telegram_bot_token_here
 
-# Configuración del timezone
-TZ=Europe/Madrid
+# 📊 CONFIGURACIÓN DE BASE DE DATOS
+# Para Synology usamos PostgreSQL por defecto (más robusto)
+USE_SQLITE=false
 
-# Configuración de archivos
-DATA_DIR=./data
-PHOTOS_DIR=./data/photos
-REPORTS_DIR=./data/reports
+# 🗄️ CONFIGURACIÓN POSTGRESQL PARA SYNOLOGY
+# IMPORTANTE: Cambiar estos valores por los tuyos
+POSTGRES_DB=bot_telegram_db
+POSTGRES_USER=bot_admin
+POSTGRES_PASSWORD=MiPassword123!Seguro
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+
+# 🌍 CONFIGURACIÓN REGIONAL
+# Ajustar según tu ubicación
+TZ=Europe/Madrid
+LOCALE=es_ES.UTF-8
+
+# 📁 RUTAS DE DATOS EN SYNOLOGY
+# IMPORTANTE: Estas son las rutas que debes crear en tu Synology:
+# /volume1/docker/bot_telegram/data/        - Para archivos del bot
+# /volume1/docker/bot_telegram/postgres_data/ - Para datos PostgreSQL  
+# /volume1/docker/bot_telegram/logs/        - Para logs del sistema
+# /volume1/docker/bot_telegram/backups/     - Para backups automáticos
+
+# 🔧 CONFIGURACIÓN AVANZADA
+DEBUG=false
+LOG_LEVEL=INFO
+
+# 📧 NOTIFICACIONES (OPCIONAL)
+# Para recibir notificaciones de errores críticos
+ADMIN_USER_ID=195947658
+NOTIFICATION_CHAT_ID=195947658
+
+# 🔒 CONFIGURACIÓN DE SEGURIDAD
+# Lista de usuarios autorizados (separados por coma)
+AUTHORIZED_USERS=195947658,123456789,987654321
+
+# ⚡ CONFIGURACIÓN DE RENDIMIENTO
+# Ajustado para Synology DS1520+
+MAX_WORKERS=4
+POOL_SIZE=10
+MAX_OVERFLOW=20
+
+# 🔄 CONFIGURACIÓN DE BACKUP
+AUTO_BACKUP_ENABLED=true
+BACKUP_RETENTION_DAYS=30
+BACKUP_PATH=/app/data/backups
+
+# Configuración de archivos (rutas internas del contenedor)
+DATA_DIR=/app/data
+PHOTOS_DIR=/app/data/photos
+REPORTS_DIR=/app/data/reports
