implementado en .env IDGROUP

--- a/.env
+++ b/.env
@@ -39,6 +39,11 @@ LOG_LEVEL=INFO
 ADMIN_USER_ID=195947658
 NOTIFICATION_CHAT_ID=195947658
 
+# 📢 GRUPO DE REPORTES
+# ID del grupo de Telegram donde se envían todos los reportes del bot
+# IMPORTANTE: Debe empezar con "-" para grupos (ej: -1001234567890)
+GROUP_CHAT_ID=-1001234567890
+
 # 🔒 CONFIGURACIÓN DE SEGURIDAD
 # Lista de usuarios autorizados (separados por coma)
 AUTHORIZED_USERS=195947658,123456789,987654321
